--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -57,11 +57,7 @@ pnpm add @clerk/nextjs
 
 ### Set your environment variables
 
-1. If you are signed into Clerk, the following `.env.local` snippet will contain your keys. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
-
-1. Add your keys to your `.env.local` file.
-
-The final result should resemble the following:
+WIP
 
   <InjectKeys>
 
@@ -121,39 +117,28 @@ Now that Clerk is installed and mounted in your application, you can decide whic
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
 2. In your `middleware.ts` file, export Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware) helper. This helper enables authentication and blocks access for signed out visitors on routes that your middleware runs on.
 
+  Next.js middleware only runs on routes specified with [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your routes:
 
+  ```tsx filename="middleware.ts"
+  import { authMiddleware } from "@clerk/nextjs";
 
-    Next.js middleware only runs on routes specified with [`matcher`](https://nextjs.org/docs/app/building-your-application/routing/middleware#matcher). Add the following code to your `middleware.ts` to protect your routes:
+  // See https://clerk.com/docs/references/nextjs/auth-middleware
+  // for more information about configuring your Middleware
+  export default authMiddleware({
+    // Allow signed out users to access the specified routes:
+    // publicRoutes: ['/anyone-can-visit-this-route'],
+  });
 
-    ```tsx filename="middleware.ts"
-    import { authMiddleware } from "@clerk/nextjs";
-
-    // See https://clerk.com/docs/references/nextjs/auth-middleware
-    // for more information about configuring your Middleware
-
-    export default authMiddleware({
-      // Allow signed out users to access the specified routes:
-      // publicRoutes: ['/anyone-can-visit-this-route'],
-      // Prevent the specified routes from accessing
-      // authentication information:
-      // ignoredRoutes: ['/no-auth-in-this-route'],
-    });
-
-    export const config = {
-      matcher: [
-        // Exclude files with a "." followed by an extension, which are typically static files.
-        // Exclude files in the _next directory, which are Next.js internals.
-
-        "/((?!.+\\.[\\w]+$|_next).*)",
-        // Re-include any files in the api or trpc folders that might have an extension
-        "/(api|trpc)(.*)"
-      ]
-    };
-    ```
-
-<Callout type="info">
-  See the [`authMiddleware()`](/docs/references/nextjs/auth-middleware#default-behaviour) docs to learn more about `publicRoutes` and `ignoredRoutes`.
-</Callout>
+  export const config = {
+    matcher: [
+      // Exclude files with a "." followed by an extension, which are typically static files.
+      // Exclude files in the _next directory, which are Next.js internals.
+      "/((?!.+\\.[\\w]+$|_next).*)",
+      // Re-include any files in the api or trpc folders that might have an extension
+      "/(api|trpc)(.*)"
+    ]
+  };
+  ```
 
 ### Try accessing your app
 
