--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -5,7 +5,13 @@ description: Learn about the methods on the Organization object that allow you t
 
 # Organization membership methods
 
+<Callout type="warning">
+  Organizations must be enabled in your Clerk settings for these methods to work. See the [Organizations overview](/docs/organizations/overview#enable-organizations-in-your-application) to learn more.
+</Callout>
+
 These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the memberships of an organization.
+
+To see how all these methods work together, check out the [comprehensive example](#organization-membership-methods-example).
 
 ## `getMemberships()`
 
@@ -33,71 +39,7 @@ function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedRespon
 | --- | --- |
 | `Promise<ClerkPaginatedResponse<OrganizationMembership>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
-### `getMemberships()` example
-
-<InjectKeys>
-
-<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
-import Clerk from '@clerk/clerk-js';
-
-// Initialize Clerk with your Clerk publishable key
-const clerk = new Clerk('{{pub_key}}');
-await clerk.load();
-
-if (clerk.user) {
-  await clerk.organization.getMemberships()
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
-} else {
-  document.getElementById("app").innerHTML = `
-    <div id="sign-in"></div>
-  `;
-
-  const signInDiv = document.getElementById("sign-in");
-
-  clerk.mountSignIn(signInDiv);
-}
-```
-
-```html filename="index.html"
-  <div id="app"></div>
-
-  <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
-  <script
-    async
-    crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-    type="text/javascript"
-  ></script>
-
-  <script>
-    window.addEventListener("load", async function () {
-      await Clerk.load();
-
-      if (Clerk.user) {
-        await Clerk.organization.getMemberships()
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
-      } else {
-        document.getElementById("app").innerHTML = `
-          <div id="sign-in"></div>
-        `;
-
-        const signInDiv = document.getElementById("sign-in");
-
-        Clerk.mountSignIn(signInDiv);
-      }
-    });
-  </script>
-```
-</CodeBlockTabs>
-
-</InjectKeys>
-
-## getMembershipRequests()
+## `getMembershipRequests()`
 
 Retrieve the list of membership requests for the currently active organization.
 
@@ -118,70 +60,6 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
 | Type | Description |
 | --- | --- |
 | `Promise<ClerkPaginatedResponse<OrganizationMembershipRequestResource>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembershipRequest`](/docs/references/javascript/organization-membership-request) objects. |
-
-### `getMembershipRequests()` example
-
-<InjectKeys>
-
-<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
-import Clerk from '@clerk/clerk-js';
-
-// Initialize Clerk with your Clerk publishable key
-const clerk = new Clerk('{{pub_key}}');
-await clerk.load();
-
-if (clerk.user) {
-  await clerk.organization.getMembershipRequests()
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
-} else {
-  document.getElementById("app").innerHTML = `
-    <div id="sign-in"></div>
-  `;
-
-  const signInDiv = document.getElementById("sign-in");
-
-  clerk.mountSignIn(signInDiv);
-}
-```
-
-```html filename="index.html"
-  <div id="app"></div>
-
-  <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
-  <script
-    async
-    crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-    type="text/javascript"
-  ></script>
-
-  <script>
-    window.addEventListener("load", async function () {
-      await Clerk.load();
-
-      if (Clerk.user) {
-        await Clerk.organization.getMembershipRequests()
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
-      } else {
-        document.getElementById("app").innerHTML = `
-          <div id="sign-in"></div>
-        `;
-
-        const signInDiv = document.getElementById("sign-in");
-
-        Clerk.mountSignIn(signInDiv);
-      }
-    });
-  </script>
-```
-</CodeBlockTabs>
-
-</InjectKeys>
 
 ## `addMember()`
 
@@ -206,76 +84,6 @@ function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
 | --- | --- |
 | `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the [`OrganizationMembership`][org-mem-ref] object. |
 
-### `addMember()` example
-
-<InjectKeys>
-
-<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
-import Clerk from '@clerk/clerk-js';
-
-// Initialize Clerk with your Clerk publishable key
-const clerk = new Clerk('{{pub_key}}');
-await clerk.load();
-
-if (clerk.user) {
-  const userId = "user_123";
-
-  await clerk.organization
-    .addMember({ userId, role: "org:member" })
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
-} else {
-  document.getElementById("app").innerHTML = `
-    <div id="sign-in"></div>
-  `;
-
-  const signInDiv = document.getElementById("sign-in");
-
-  clerk.mountSignIn(signInDiv);
-}
-```
-
-```html filename="index.html"
-  <div id="app"></div>
-
-  <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
-  <script
-    async
-    crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-    type="text/javascript"
-  ></script>
-
-  <script>
-    window.addEventListener("load", async function () {
-      await Clerk.load();
-
-      if (Clerk.user) {
-        const userId = "user_123";
-
-        await Clerk.organization
-          .addMember({ userId, role: "org:member" })
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
-      } else {
-        document.getElementById("app").innerHTML = `
-          <div id="sign-in"></div>
-        `;
-
-        const signInDiv = document.getElementById("sign-in");
-
-        Clerk.mountSignIn(signInDiv);
-      }
-    });
-  </script>
-```
-</CodeBlockTabs>
-
-</InjectKeys>
-
 ## `updateMember()`
 
 Updates a member. Currently, only a user's role can be updated.
@@ -297,76 +105,6 @@ function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembe
 | --- | --- |
 | `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the updated [`OrganizationMembership`][org-mem-ref] object. |
 
-### `updateMember()` example
-
-<InjectKeys>
-
-<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
-import Clerk from '@clerk/clerk-js';
-
-// Initialize Clerk with your Clerk publishable key
-const clerk = new Clerk('{{pub_key}}');
-await clerk.load();
-
-if (clerk.user) {
-  const userId = "user_123";
-
-  await clerk.organization
-    .updateMember({ userId, role: "org:member" })
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
-} else {
-  document.getElementById("app").innerHTML = `
-    <div id="sign-in"></div>
-  `;
-
-  const signInDiv = document.getElementById("sign-in");
-
-  clerk.mountSignIn(signInDiv);
-}
-```
-
-```html filename="index.html"
-  <div id="app"></div>
-
-  <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
-  <script
-    async
-    crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-    type="text/javascript"
-  ></script>
-
-  <script>
-    window.addEventListener("load", async function () {
-      await Clerk.load();
-
-      if (Clerk.user) {
-        const userId = "user_123";
-
-        await Clerk.organization
-          .updateMember({ userId, role: "org:member" })
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
-      } else {
-        document.getElementById("app").innerHTML = `
-          <div id="sign-in"></div>
-        `;
-
-        const signInDiv = document.getElementById("sign-in");
-
-        Clerk.mountSignIn(signInDiv);
-      }
-    });
-  </script>
-```
-</CodeBlockTabs>
-
-</InjectKeys>
-
 ## `removeMember()`
 
 Removes a member from the organization based on the `userId`.
@@ -387,73 +125,540 @@ function removeMember(userId: string): Promise<OrganizationMembership>;
 | --- | --- |
 | `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the removed [`OrganizationMembership`][org-mem-ref] object. |
 
-### `removeMember()` example
+## Organization membership methods example
+
+The following example demonstrates how to use the organization membership methods to manage the members of an organization. To ease the development process, the response or error message of a method will be displayed on the user interface as well.
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
-import Clerk from '@clerk/clerk-js';
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+  For the following example, your HTML file should look like this:
 
-// Initialize Clerk with your Clerk publishable key
-const clerk = new Clerk('{{pub_key}}');
-await clerk.load();
+  ```html filename="index.html"
+  <!doctype html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Clerk + JavaScript App</title>
+      <style>
+        /* Style for the table */
+        table {
+          border-collapse: collapse; /* Collapse borders into a single border */
+          border: 1px solid black; /* Border for the entire table */
+        }
 
-if (clerk.user) {
-  const userId = "user_123";
+        /* Style for table cells */
+        td,
+        th {
+          border: 1px solid black; /* Border for each cell */
+          padding: 2px; /* Optional: Add padding to cells */
+        }
+      </style>
+    </head>
+    <body>
+      <div id="app"></div>
 
-  await clerk.organization
-    .updateMember(userId)
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
-} else {
-  document.getElementById("app").innerHTML = `
-    <div id="sign-in"></div>
-  `;
+      <p id="error-container" hidden>
+        Error:
+        <span id="error-message"></span>
+      </p>
 
-  const signInDiv = document.getElementById("sign-in");
+      <h2>Memberships List</h2>
+      <table id="memberships_table">
+        <thead>
+          <tr>
+            <th>User ID</th>
+            <th>Identifier</th>
+            <th>Role</th>
+            <th id="update-role-head" hidden>Update role</th>
+            <th id="remove-member-head" hidden>Remove member</th>
+          </tr>
+        </thead>
+        <tbody id="memberships_table_body"></tbody>
+      </table>
 
-  clerk.mountSignIn(signInDiv);
-}
-```
+      <h2>Membership Requests</h2>
+      <table id="requests_table">
+        <thead>
+          <tr>
+            <th>User ID</th>
+            <th>Identifier</th>
+            <th>Status</th>
+            <th id="add-member-head" hidden>Add member</th>
+          </tr>
+        </thead>
+        <tbody id="requests_table_body"></tbody>
+      </table>
 
-```html filename="index.html"
-  <div id="app"></div>
+      <p>Response:</p>
+      <pre id="response"></pre>
 
-  <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
-  <script
-    async
-    crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-    type="text/javascript"
-  ></script>
+      <script type="module" src="/main.js"></script>
+    </body>
+  </html>
+  ```
 
-  <script>
-    window.addEventListener("load", async function () {
-      await Clerk.load();
+  And your JavaScript file should look like this:
 
-      if (Clerk.user) {
-        const userId = "user_123";
+  ```js filename="main.js" {13,40,59, }
+  import Clerk from '@clerk/clerk-js';
 
-        await Clerk.organization
-          .removeMember(userId)
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
-      } else {
-        document.getElementById("app").innerHTML = `
-          <div id="sign-in"></div>
-        `;
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
 
-        const signInDiv = document.getElementById("sign-in");
+  if (clerk.user) {
+    // Check for an active organization
+    if (clerk.organization) {
+      // Render list of organization memberships
+      async function renderMemberships(organization, isAdmin) {
+        try {
+          const memberships = await organization.getMemberships();
+          console.log(`getMemberships:`, memberships);
 
-        Clerk.mountSignIn(signInDiv);
+          memberships.map((membership) => {
+            const membershipTable = document.getElementById("memberships_table");
+            const row = membershipTable.insertRow();
+            row.insertCell().textContent = membership.publicUserData.userId;
+            row.insertCell().textContent = membership.publicUserData.identifier;
+            row.insertCell().textContent = membership.role;
+
+            // Add administrative actions:
+            // Update a member's role and remove a member.
+            if (isAdmin) {
+              // Show update and remove buttons
+              document.getElementById("update-role-head").removeAttribute("hidden");
+              document.getElementById("remove-member-head").removeAttribute("hidden");
+
+              // Get the user ID of the member
+              const userId = membership.publicUserData.userId;
+
+              // Update a member's role
+              const updateBtn = document.createElement("button");
+              updateBtn.textContent = "Change role";
+              updateBtn.addEventListener("click", async function (e) {
+                e.preventDefault();
+                const role =
+                  membership.role === "org:admin" ? "org:member" : "org:admin";
+                await organization.updateMember({ userId, role })
+                  .then((res) => {
+                    document.getElementById("response").innerHTML =
+                      JSON.stringify(res);
+                  })
+                  .catch((error) => {
+                    document.getElementById("error-container").removeAttribute("hidden");
+                    document.getElementById("error-message").innerHTML =
+                      error.errors[0].longMessage;
+                    console.log("An error occurred:", error.errors);
+                  });
+              });
+              row.insertCell().appendChild(updateBtn);
+
+              // Remove a member
+              const removeBtn = document.createElement("button");
+              removeBtn.textContent = "Remove";
+              removeBtn.addEventListener("click", async function (e) {
+                e.preventDefault();
+                await organization.removeMember(userId)
+                  .then((res) => {
+                    document.getElementById("response").innerHTML =
+                      JSON.stringify(res);
+                  })
+                  .catch((error) => {
+                    document.getElementById("error-container").removeAttribute("hidden");
+                    document.getElementById("error-message").innerHTML =
+                      error.errors[0].longMessage;
+                    console.log("An error occurred:", error.errors);
+                  });
+              });
+              row.insertCell().appendChild(removeBtn);
+            }
+          });
+        } catch (error) {
+          document.getElementById("error-container").removeAttribute("hidden");
+          document.getElementById("error-message").innerHTML =
+            error.errors[0].longMessage;
+          console.log("An error occurred:", error.errors);
+        }
       }
-    });
-  </script>
-```
-</CodeBlockTabs>
+
+      // Render list of organization membership requests
+      async function renderMembershipRequests(organization, isAdmin) {
+        try {
+          const { data } = await organization.getMembershipRequests();
+          const membershipRequests = data;
+          console.log(`getMembershipRequests:`, membershipRequests);
+
+          membershipRequests.map((membershipRequest) => {
+            const requestsTable = document.getElementById("requests_table");
+            const row = requestsTable.insertRow();
+            row.insertCell().textContent =
+              membershipRequest.publicUserData.userId;
+            row.insertCell().textContent =
+              membershipRequest.publicUserData.identifier;
+            row.insertCell().textContent = membershipRequest.status;
+
+            // Add administrative actions:
+            // Add member (removes request)
+            if (isAdmin) {
+              // Show add member button
+              document.getElementById("add-member-head").removeAttribute("hidden");
+
+              // Get the user ID of the member
+              const userId = membershipRequest.publicUserData.userId;
+
+              // Add member to organization
+              const addBtn = document.createElement("button");
+              addBtn.textContent = "Add member";
+              addBtn.addEventListener("click", async function (e) {
+                e.preventDefault();
+                const role = "org:member";
+                await organization.addMember({ userId, role })
+                  .then((res) => {
+                    document.getElementById("response").innerHTML =
+                      JSON.stringify(res);
+                  })
+                  .catch((error) => {
+                    document.getElementById("error-container").removeAttribute("hidden");
+                    document.getElementById("error-message").innerHTML =
+                      error.errors[0].longMessage;
+                    console.log("An error occurred:", error.errors);
+                  });
+              });
+              row.insertCell().appendChild(addBtn);
+            }
+          });
+        } catch (error) {
+          document.getElementById("error-container").removeAttribute("hidden");
+          document.getElementById("error-message").innerHTML =
+            error.errors[0].longMessage;
+          console.log("An error occurred:", error.errors);
+        }
+      }
+
+      /**
+       * Checks if a user is an admin of the
+       * currently active organization and
+       * renders the organization's memberships.
+       */
+      async function checkAdminAndRenderMemberships() {
+        const organizationId = clerk.organization.id;
+
+        const organizationMemberships =
+          await clerk.user.getOrganizationMemberships();
+
+        const currentMembership = organizationMemberships.find(
+          (membership) => membership.organization.id === organizationId
+        );
+        const currentOrganization = currentMembership.organization;
+
+        if (!currentOrganization) {
+          return;
+        }
+        const isAdmin = currentMembership.role === "org:admin";
+
+        console.log(`Organization:`, currentOrganization);
+
+        renderMemberships(currentOrganization, isAdmin);
+        renderMembershipRequests(currentOrganization, isAdmin);
+      }
+
+      checkAdminAndRenderMemberships();
+    } else {
+      // If there is no active organization,
+      // mount Clerk's <OrganizationSwitcher />
+      // to allow the user to set an organization as active
+      document.getElementById("app").innerHTML = `
+        <h2>Select an organization to set it as active</h2>
+        <div id="org-switcher"></div>
+      `;
+
+      const orgSwitcherDiv = document.getElementById("org-switcher");
+
+      clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+    }
+  } else {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  }
+  ```
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html"
+  <!doctype html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Clerk + JavaScript App</title>
+      <style>
+        /* Style for the table */
+        table {
+          border-collapse: collapse; /* Collapse borders into a single border */
+          border: 1px solid black; /* Border for the entire table */
+        }
+
+        /* Style for table cells */
+        td,
+        th {
+          border: 1px solid black; /* Border for each cell */
+          padding: 2px; /* Optional: Add padding to cells */
+        }
+      </style>
+    </head>
+    <body>
+      <div id="app"></div>
+
+      <p id="error-container" hidden>
+        Error:
+        <span id="error-message"></span>
+      </p>
+
+      <h2>Memberships List</h2>
+      <table id="memberships_table">
+        <thead>
+          <tr>
+            <th>User ID</th>
+            <th>Identifier</th>
+            <th>Role</th>
+            <th id="update-role-head" hidden>Update role</th>
+            <th id="remove-member-head" hidden>Remove member</th>
+          </tr>
+        </thead>
+        <tbody id="memberships_table_body"></tbody>
+      </table>
+
+      <h2>Membership Requests</h2>
+      <table id="requests_table">
+        <thead>
+          <tr>
+            <th>User ID</th>
+            <th>Identifier</th>
+            <th>Status</th>
+            <th id="add-member-head" hidden>Add member</th>
+          </tr>
+        </thead>
+        <tbody id="requests_table_body"></tbody>
+      </table>
+
+      <p>Response:</p>
+      <pre id="response"></pre>
+
+      <!-- Initialize Clerk with your
+      Clerk publishable key and Frontend API URL -->
+      <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key='{{pub_key}}'
+        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        type="text/javascript"
+      ></script>
+
+      <script>
+        window.addEventListener("load", async function () {
+          await Clerk.load();
+
+          if (Clerk.user) {
+            // Check for an active organization
+            if (Clerk.organization) {
+              // Render list of organization memberships
+              async function renderMemberships(organization, isAdmin) {
+                try {
+                  const memberships = await organization.getMemberships();
+                  console.log(`getMemberships:`, memberships);
+
+                  memberships.map((membership) => {
+                    const membershipTable = document.getElementById("memberships_table");
+                    const row = membershipTable.insertRow();
+                    row.insertCell().textContent = membership.publicUserData.userId;
+                    row.insertCell().textContent = membership.publicUserData.identifier;
+                    row.insertCell().textContent = membership.role;
+
+                    // Add administrative actions:
+                    // Update a member's role and remove a member.
+                    if (isAdmin) {
+                      // Show update and remove buttons
+                      document.getElementById("update-role-head").removeAttribute("hidden");
+                      document.getElementById("remove-member-head").removeAttribute("hidden");
+
+                      // Get the user ID of the member
+                      const userId = membership.publicUserData.userId;
+
+                      // Update a member's role
+                      const updateBtn = document.createElement("button");
+                      updateBtn.textContent = "Change role";
+                      updateBtn.addEventListener("click", async function (e) {
+                        e.preventDefault();
+                        const role =
+                          membership.role === "org:admin" ? "org:member" : "org:admin";
+                        await organization.updateMember({ userId, role })
+                          .then((res) => {
+                            document.getElementById("response").innerHTML =
+                              JSON.stringify(res);
+                          })
+                          .catch((error) => {
+                            document.getElementById("error-container").removeAttribute("hidden");
+                            document.getElementById("error-message").innerHTML =
+                              error.errors[0].longMessage;
+                            console.log("An error occurred:", error.errors);
+                          });
+                      });
+                      row.insertCell().appendChild(updateBtn);
+
+                      // Remove a member
+                      const removeBtn = document.createElement("button");
+                      removeBtn.textContent = "Remove";
+                      removeBtn.addEventListener("click", async function (e) {
+                        e.preventDefault();
+                        await organization.removeMember(userId)
+                          .then((res) => {
+                            document.getElementById("response").innerHTML =
+                              JSON.stringify(res);
+                          })
+                          .catch((error) => {
+                            document.getElementById("error-container").removeAttribute("hidden");
+                            document.getElementById("error-message").innerHTML =
+                              error.errors[0].longMessage;
+                            console.log("An error occurred:", error.errors);
+                          });
+                      });
+                      row.insertCell().appendChild(removeBtn);
+                    }
+                  });
+                } catch (error) {
+                  document.getElementById("error-container").removeAttribute("hidden");
+                  document.getElementById("error-message").innerHTML =
+                    error.errors[0].longMessage;
+                  console.log("An error occurred:", error.errors);
+                }
+              }
+
+              // Render list of organization membership requests
+              async function renderMembershipRequests(organization, isAdmin) {
+                try {
+                  const { data } = await organization.getMembershipRequests();
+                  const membershipRequests = data;
+                  console.log(`getMembershipRequests:`, membershipRequests);
+
+                  membershipRequests.map((membershipRequest) => {
+                    const requestsTable = document.getElementById("requests_table");
+                    const row = requestsTable.insertRow();
+                    row.insertCell().textContent =
+                      membershipRequest.publicUserData.userId;
+                    row.insertCell().textContent =
+                      membershipRequest.publicUserData.identifier;
+                    row.insertCell().textContent = membershipRequest.status;
+
+                    // Add administrative actions:
+                    // Add member (removes request)
+                    if (isAdmin) {
+                      // Show add member button
+                      document
+                        .getElementById("add-member-head")
+                        .removeAttribute("hidden");
+
+                      // Get the user ID of the member
+                      const userId = membershipRequest.publicUserData.userId;
+
+                      // Add member to organization
+                      const addBtn = document.createElement("button");
+                      addBtn.textContent = "Add member";
+                      addBtn.addEventListener("click", async function (e) {
+                        e.preventDefault();
+                        const role = "org:member";
+                        await organization
+                          .addMember({ userId, role })
+                          .then((res) => {
+                            document.getElementById("response").innerHTML =
+                              JSON.stringify(res);
+                          })
+                          .catch((error) => {
+                            document
+                              .getElementById("error-container")
+                              .removeAttribute("hidden");
+                            document.getElementById("error-message").innerHTML =
+                              error.errors[0].longMessage;
+                            console.log("An error occurred:", error.errors);
+                          });
+                      });
+                      row.insertCell().appendChild(addBtn);
+                    }
+                  });
+                } catch (error) {
+                  document.getElementById("error-container").removeAttribute("hidden");
+                  document.getElementById("error-message").innerHTML =
+                    error.errors[0].longMessage;
+                  console.log("An error occurred:", error.errors);
+                }
+              }
+
+              /**
+              * Checks if a user is an admin of the
+              * currently active organization and
+              * renders the organization's memberships.
+              */
+              async function checkAdminAndRenderMemberships() {
+                const organizationId = Clerk.organization.id;
+
+                const organizationMemberships =
+                  await Clerk.user.getOrganizationMemberships();
+
+                const currentMembership = organizationMemberships.find(
+                  (membership) => membership.organization.id === organizationId
+                );
+                const currentOrganization = currentMembership.organization;
+
+                if (!currentOrganization) {
+                  return;
+                }
+                const isAdmin = currentMembership.role === "org:admin";
+
+                console.log(`Organization:`, currentOrganization);
+
+                renderMemberships(currentOrganization, isAdmin);
+                renderMembershipRequests(currentOrganization, isAdmin);
+              }
+
+              checkAdminAndRenderMemberships();
+            } else {
+              // If there is no active organization,
+              // mount Clerk's <OrganizationSwitcher />
+              // to allow the user to set an organization as active
+              document.getElementById("app").innerHTML = `
+                <h2>Select an organization to set it as active</h2>
+                <div id="org-switcher"></div>
+              `;
+
+              const orgSwitcherDiv = document.getElementById("org-switcher");
+
+              Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+            }
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
+
+            const signInDiv = document.getElementById("sign-in");
+
+            Clerk.mountSignIn(signInDiv);
+          }
+        });
+      </script>
+    </body>
+  </html>
+  ```
+  </Tab>
+</Tabs>
 
 </InjectKeys>
 
